# packages/protocol/octobot_protocol/models/transaction_type.py
@@ -1,0 +1,39 @@
+# coding: utf-8
+
+"""
+    OctoBot protocol types
+
+    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import json
+from enum import Enum
+from typing_extensions import Self
+
+
+class TransactionType(str, Enum):
+    """
+    TransactionType
+    """
+
+    """
+    allowed enum values
+    """
+    BLOCKCHAIN_DEPOSIT = 'blockchain_deposit'
+    BLOCKCHAIN_WITHDRAWAL = 'blockchain_withdrawal'
+    FUNDING_FEE = 'funding_fee'
+    TRADING_FEE = 'trading_fee'
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of TransactionType from a JSON string"""
+        return cls(json.loads(json_str))
+
+
